Add search form and login form

--- a/transcriptome/templates/base.jinja2
+++ b/transcriptome/templates/base.jinja2
@@ -24,27 +24,32 @@
 
   <div id="header">
     {% block header %}
-
     {% endblock header %}
   </div>
 
   <div id="menu">
     {% block menu %}
-
     {% endblock menu %}
+  </div>
+
+  <div id="search">
+    {% block search %}
+    {% endblock search %}
+  </div>
+
+  <div id="login">
+    {% block login %}
+    {% endblock login %}
   </div>
 
   <div id="content">
     {% block content %}
-
     {% endblock content %}
   </div>
 
   <div id="footer">
     {% block footer %}
-
     <p>Oriental Fruit Fly Transcriptome Database v0.0</p>
-
     {% endblock footer %}
   </div>
 
