--- a/transcriptome/templates/index.jinja2
+++ b/transcriptome/templates/index.jinja2
@@ -1,50 +1,26 @@
 {% extends "base.jinja2" %}
 
+{% if account_status == 'active' %}
+  {% block search %}
+  {% include "transcript_search_form.jinja2" %}
+  {% endblock search %}
+
+{% else %}
+  {% block login %}
+    {% if account_status == 'expired' %}
+      <p>Please login to use database.</p>
+      {% include "login_form.jinja2" %}
+
+    {% elif account_status == 'invalid' %}
+      <p>Invalid user!</p>
+      {% include "login_form.jinja2" %}
+
+    {% endif %}
+  {% endblock login %}
+{% endif %}
+
 {% block content %}
-  {% if account_status == 'active': %}
-    <form action="/search/" method="get">
-
-      {{ transcript_search_form.non_field_errors }}
-
-      <div class="field_wrapper">
-        {{ transcript_search_form.transcript_name.errors }}
-        <label for="id_transcript_name">Transcript Name</label>
-        {{ transcript_search_form.transcript_name }}
-
-        {{ transcript_search_form.line.errors }}
-        <label for="id_line">Line</label>
-        {{ transcript_search_form.line }}
-
-        {{ transcript_search_form.insecticide.errors }}
-        <label for="id_insecticide">Insecticide</label>
-        {{ transcript_search_form.insecticide }}
-
-        {{ transcript_search_form.refacc.errors }}
-        <label for="id_refacc">Dmel Accession</label>
-        {{ transcript_search_form.refacc }}
-      </div>
-
-      <div class="field_wrapper">
-        {{ transcript_search_form.refdes.errors }}
-        <label for="id_refdes">Dmel Description</label>
-        {{ transcript_search_form.refdes }}
-      </div>
-
-      <div class="field_wrapper">
-        {{ transcript_search_form.transcript_seq.errors }}
-        <label for="id_transcript_seq">Transcript Sequence</label>
-        {{ transcript_search_form.transcript_seq}}
-      </div>
-
-      <div class="field_wrapper">
-        {{ transcript_search_form.items_per_page.errors }}
-        <label for="id_items_per_page">Items per page</label>
-        {{ transcript_search_form.items_per_page }}
-      </div>
-
-      <p><input type="submit", value="Search" /><input type="reset", value="Clear" /></p>
-
-    </form>
-
-  {% endif %}
+  {% block welcome_msg %}
+  <p>Welcome!</p>
+{% endblock welcome_msg %}
 {% endblock content %}
