Use coffin module

--- a/transcriptome/templates/login_form.jinja2
+++ b/transcriptome/templates/login_form.jinja2
@@ -1,8 +1,7 @@
 {% if login_form %}
-  <form action="/login/" method="post">
-    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}" />
+  <form action="/bdorseq/login/" method="post">{% csrf_token %}
 
-    {{ login_form.non_field_errors }}
+    {# {{ login_form.non_field_errors }} #}
 
     <div class="fieldWrapper">
       {{ login_form.username.errors }}
