--- a/transcriptome/templates/base.jinja2
+++ b/transcriptome/templates/base.jinja2
@@ -29,6 +29,11 @@
     {% endblock menu %}
   </div>
 
+  <div id="logout">
+    {% block logout %}
+    {% endblock logout %}
+  </div>
+
   <div id="search">
     {% block search %}
     {% endblock search %}
