--- a/transcriptome/templates/search.jinja2
+++ b/transcriptome/templates/search.jinja2
@@ -44,8 +44,9 @@
         <input type="hidden" name="seq", value={{ getparam.seq|safe }} />
         <input type="hidden" name="refacc", value={{ getparam.refacc|safe }} />
         <input type="hidden" name="refdes", value={{ getparam.refdes|safe }} />
-        <input type="submit", name="export_fasta", value="Export to FASTA file" />
-        <input type="submit", name="export_tsv", value="Export to TSV file" />
+        <input type="submit", name="export_fasta", value="Download FASTA" />
+        <input type="submit", name="export_blast", value="Download BLAST" />
+        <input type="submit", name="export_rpkm", value="Download Gene Expression" />
         <table>
           <thead>
             <tr>
