Update gene expression model and download option. Add help page.

--- a/transcriptome/templates/search.jinja2
+++ b/transcriptome/templates/search.jinja2
@@ -64,7 +64,7 @@
                 <td><input type="checkbox", name={{ '_export_' ~ query.id }}, value={{ query.id }} /></td>
                 <td>{{ query.seqname }}</td>
                 <td>{{ query.seq|length }}</td>
-                {% if query.homology_set.all().0 is defined  %}
+                {% if query.homology_set.all().count() > 0  %}
                   <td>{{ query.homology_set.all().0.hit_name }}</td>
                   <td>{{ query.homology_set.all().0.hit_description }}</td>
                 {% else %}
