Work on transcript details

--- a/transcriptome/templates/search.jinja2
+++ b/transcriptome/templates/search.jinja2
@@ -62,7 +62,7 @@
             {% for query in transcript_subset %}
               <tr>
                 <td><input type="checkbox", name={{ '_export_' ~ query.id }}, value={{ query.id }} /></td>
-                <td>{{ query.seqname }}</td>
+                <td><a href="/details/{{ query.seqname }}/" target="_blank">{{ query.seqname }}</a></td>
                 <td>{{ query.seq|length }}</td>
                 {% if query.homology_set.all().count() > 0  %}
                   <td>{{ query.homology_set.all().0.hit_name }}</td>
