--- a/transcriptome/templates/base.jinja2
+++ b/transcriptome/templates/base.jinja2
@@ -42,7 +42,8 @@
 
   <div id="footer">
     {% block footer %}
-    <p>Oriental Fruit Fly Transcriptome Database v1.4</p>
+    Oriental Fruit Fly Transcriptome Database v2.0</br>
+    Supported by c4Lab
     {% endblock footer %}
   </div>
 
