--- a/transcriptome/templates/index.jinja2
+++ b/transcriptome/templates/index.jinja2
@@ -7,8 +7,7 @@
 {% block content %}
   {% block archive %}
     <h2>Archive</h2>
-
-    {% include "archive_form.jinja2" %}
+    {% include "archive_search_form.jinja2" %}
   {% endblock archive %}
 
   {% block seqvar %}
