--- a/transcriptome/templates/search.jinja2
+++ b/transcriptome/templates/search.jinja2
@@ -1,5 +1,9 @@
 {% extends "base.jinja2" %}
 
+{% block title %}
+  Download
+{% endblock title %}
+
 {% block content %}
     {% block search %}
       {% include "transcript_search_form.jinja2"  %}
@@ -32,44 +36,48 @@
       <a href="/bdorseq/search/?page={{ pager.last_page }}&line={{ getparam.line }}&seqname={{ getparam.seqname }}&refacc={{ getparam.refacc }}&refdes={{ getparam.refdes }}&seq={{ getparam.seq }}&items_per_page={{ getparam.items_per_page }}">Last<a>
     {% endif %}
 
-    {% block export_form %}
-      <form name="export_form", action="/bdorseq/export/" method="post">
-        <input type="hidden" name="seqname", value="{{ getparam.seqname }}" />
-        <input type="hidden" name="line", value="{{ getparam.line }}" />
-        <input type="hidden" name="seq", value="{{ getparam.seq }}" />
-        <input type="hidden" name="refacc", value="{{ getparam.refacc }}" />
-        <input type="hidden" name="refdes", value="{{ getparam.refdes }}" />
-        <input type="submit", name="export_fasta", value="Download FASTA" />
-        <input type="submit", name="export_blast", value="Download BLAST" />
-        <input type="submit", name="export_rpkm", value="Download Gene Expression" />
-        <table>
-          <thead>
-            <tr>
-              <th>{# <input type="checkbox" onClick="toggle('export_form" /> #}</th>
-              <th>Transcript Name</th>
-              <th>Length (bp)</th>
-              <th>Reference Acc</th>
-              <th>Reference Description</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            {% for query in transcript_subset %}
+    {% if transcript_subset.exists() %}
+      {% block export_form %}
+        <form name="export_form", action="/bdorseq/export/" method="post">
+          <input type="hidden" name="seqname", value="{{ getparam.seqname }}" />
+          <input type="hidden" name="line", value="{{ getparam.line }}" />
+          <input type="hidden" name="seq", value="{{ getparam.seq }}" />
+          <input type="hidden" name="refacc", value="{{ getparam.refacc }}" />
+          <input type="hidden" name="refdes", value="{{ getparam.refdes }}" />
+          <input type="submit", name="export_fasta", value="Download FASTA" />
+          <input type="submit", name="export_blast", value="Download BLAST" />
+          <input type="submit", name="export_rpkm", value="Download Gene Expression" />
+          <table>
+            <thead>
               <tr>
-                <td><input type="checkbox", name={{ '_export_' ~ query.id }}, value={{ query.id }} /></td>
-                <td><a href="/bdorseq/details/{{ query.seqname }}/" target="_blank", style="text-decoration: none">{{ query.seqname }}</a></td>
-                <td>{{ query.seq|length }}</td>
-                {% if query.homology_set.all().exists()  %}
-                  <td>{{ query.homology_set.all().0.hit_name_id }}</td>
-                  <td>{{ query.homology_set.all().0.hit_description }}</td>
-                {% else %}
-                  <td></td>
-                  <td></td>
-                {% endif %}
+                <th>{# <input type="checkbox" onClick="toggle('export_form" /> #}</th>
+                <th>Transcript Name</th>
+                <th>Length (bp)</th>
+                <th>Reference Acc</th>
+                <th>Reference Description</th>
               </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </form>
-    {% endblock export_form %}
+            </thead>
+
+            <tbody>
+              {% for query in transcript_subset %}
+                <tr>
+                  <td><input type="checkbox", name={{ '_export_' ~ query.id }}, value={{ query.id }} /></td>
+                  <td><a href="/bdorseq/details/{{ query.seqname }}/" target="_blank", style="text-decoration: none">{{ query.seqname }}</a></td>
+                  <td>{{ query.seq|length }}</td>
+                  {% if query.homology_set.all().exists()  %}
+                    <td>{{ query.homology_set.all().0.hit_name_id }}</td>
+                    <td>{{ query.homology_set.all().0.hit_description }}</td>
+                  {% else %}
+                    <td></td>
+                    <td></td>
+                  {% endif %}
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </form>
+      {% endblock export_form %}
+    {% else %}
+      <h2>No result is found!</h2>
+    {% endif %}
 {% endblock content %}
